# spine

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/: dependabot.yml
.github/workflows/: ci.yml
demo-seeder/: Cargo.toml  OPERATIONAL.md
demo-seeder/src/: main.rs  scenario.rs
docs/: verifying-at-scale.md
playground-spec/: DemoSection.example.jsx  INTEGRATION.md  build-playground-assets.sh  flow-diagram.md  manifest.example.json
spine-cli/: Cargo.toml  README.md
spine-cli/src/: export.rs  inspect.rs  main.rs  verify.rs  wal_io.rs
spine-cli/tests/: cli_smoke.rs
spine-core/: Cargo.toml
spine-core/examples/: gen_fixture.rs
spine-core/src/: canonical.rs  lib.rs  receipt.rs  verify.rs  verify_demo.rs  wal_entry.rs
spine-core/tests/: cross_language_vectors.rs  parity_lenient_vs_strict.rs
spine-wasm/: Cargo.toml  README.md
spine-wasm/src/: lib.rs
spine-wasm/tests/: integration.mjs
test-vectors/: README.md  vectors.json
