[workspace]
resolver = "2"
members = [
    "spine-core",
    "spine-cli",
    "spine-wasm",
]
# `demo-seeder/` is a one-off operational tool used on an airgapped machine
# to seed the playground demo. It is intentionally excluded
# from the workspace because it pulls in `rand` / `rand_chacha` and
# enables the `rand_core` feature on `ed25519-dalek`, both banned from
# the verifier crates' wasm32 dependency graph. Excluding it explicitly
# (rather than relying on absence from `members`) prevents a future
# `cargo build --workspace` invocation from accidentally compiling it.
exclude = [
    "demo-seeder",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/EulBite/spine"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
