[package]
name = "spine-cli"
description = "Standalone offline auditor for Spine WAL files. Verifies BLAKE3 hash chains and Ed25519 signatures without trusting any server."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version = "1.75.0"

[features]
default = []

[dependencies]
spine-core = { path = "../spine-core", features = ["iso-timestamps"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Crypto re-used by export.rs to compute manifest chain root
blake3 = "1.5"
hex = "0.4"

# Serialization / formatting
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
csv = "1.3"

# Time formatting (RFC 3339 export, ISO 8601 filter parsing)
chrono = { version = "0.4", default-features = false, features = ["std", "serde", "now"] }

# Errors
thiserror = "2.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }

[dev-dependencies]
tempfile = "3.14"
# Smoke tests build a strict-profile signed WAL fixture in-process to
# exercise `verify --strict`. A fixed 32-byte seed key (no randomness)
# keeps the fixture deterministic, so no `rand` feature is needed.
ed25519-dalek = { version = "2.1", default-features = false, features = ["std"] }
